# INA

./: README.md
AISD/: README.md
AISD/lista1/: z1.c  z2.c  z3.c
AISD/lista2/: advancedSort.cpp  dualpivot.cpp  generateData.cpp  insertionSort.cpp  mergesort.cpp  quickSort.cpp
AISD/lista3/: README.md  binarySearch.c  dualPivotWithSelect.c  generateData.c  quicksortWithSelect  selectionAlgorithms.c
AISD/lista5/: binomial_heap.c  binomial_heap.h  fibonacci_heap.c  fibonacci_heap.h  z1.c
AKISO/: README.md
AKISO/2/: DecToHex.mas  division.mas
AKISO/3/: zad6.c  zad7.sh
AKISO/4/: zad1.sh  zad2.sh  zad3.sh  zad4.sh
AKISO/5/: zad1.c  zad2-1.c  zad2-2.c  zad2-3.c  zad3.c
AKISO/6/: README.me
AKISO/7/: prime.asm
AM/l1/: .gitignore  CMakeLists.txt  Edge.cpp  Edge.h  Graph.cpp  Graph.h  Makefile  Node.cpp  Node.h  z1.cpp
AM/l1/app/: main.cpp  z1.cpp
AM/l1/app_z1/: main.c
AM/l1/app_z2/: main.c
AM/l1/inc/: DataParser.h  Graph.h  Visualizer.h  mst.h  primAlgorithm.h
AM/l1/inc/data_structs/: Graph.h  Node.h  TreeNode.h
AM/l1/libs/timer/inc/: timer.h
AM/l1/src/: DataParser.cpp  Graph.cpp  Node.cpp  Visualizer.cpp  mst.c  primAlgorithm.cpp
AM/l1/src/data_structs/: Graph.cpp  Node.cpp  TreeNode.cpp
AM/l2/: CMakeLists.txt
AM/l2/app/: z1.cpp  z2.cpp
AM/l2/inc/: DataParser.h  local_search.h  primAlgorithm.h
AM/l2/inc/data_structs/: Graph.h  Node.h  TreeNode.h
AM/l2/sprawozdanie/: results.md
AM/l2/src/: DataParser.cpp  local_search.cpp  primAlgorithm.cpp
AM/l2/src/data_structs/: Graph.cpp  Node.cpp  TreeNode.cpp
AM/l3/: CMakeLists.txt
AM/l3/app/: annealing.cpp  tabu_mst.cpp  tabu_rand.cpp
AM/l3/inc/: sim_annealing.h  tabu_search.h
AM/l3/src/: sim_annealing.cpp  tabu_search.cpp
AM/l4/: CMakeLists.txt
AM/l4/app/: main.cpp
AM/l4/inc/: genetic_algorithm.h  island.h  person.h  random_device.h
AM/l4/src/: genetic_algorithm.cpp  island.cpp  person.cpp  random_device.cpp
AOD/: README.md
AOD/l1/: z1.cpp  z2.cpp  z4.cpp
AOD/l1/SCC/: Kosaraju.py  z3Kosaraju.cpp  z3Tarjan.cpp
AOD/l2/: z1.data  z1.mod  z2.data  z2.mod  z3.data  z3.mod  z4.jl  z5.data  z5.mod
AOD/l3/: Graph_Representation.cpp  Graph_Representation.h  Makefile  README.md  data_loader.cpp  data_loader.h  dial.cpp  dijkstra.cpp  radix_heap.cpp
AOD/l4/: DGraph.cpp  DGraph.h  Graph.cpp  Graph.h  HopcrofKarp.cpp  HopcrofKarp.h  z1.cpp  z2.cpp
BDSI/: README.md
BDSI/1/: rozw1.sql
BDSI/2/: rozw2.sql
BDSI/3/: rozw3.sql
BEZP/: l4z1.py  l4z1_2.py
JFTT/: README.md
JFTT/l1/FA/: Makefile
JFTT/l1/KMP/: Makefile
JFTT/l2/: Makefile  z1.l  z1.lex  z2.l  z3.l  z4.l
JFTT/l2/test/: z2.txt  z2_solve.txt  z4.txt  z4_solve.txt
JFTT/l3/z1/: Makefile  lexer.l  parser.y
JFTT/l3/z2/: calculator.py  lexer.py  parser.py
JPP/l0/: Makefile  hello.lisp  hello.pl  hello.sml
JPP/l1/: Makefile  z1_test.c  z2_test.adb  z3_test.py  z4_test.c  z5_test.adb  z6_test.py  z7_test.c
JPP/l1/modules/: z1.c  z1.h  z2.adb  z2.ads  z3.py  z4.c  z4.h  z5.ads  z6.py  z7.c  z7.h
JPP/l2/z1/: GF.hpp  z1_test.cpp
JPP/l2/z2/: GF.java  Main.java
JPP/l2/z3/: GF.py  z3_test.py
JPP/l3/: Makefile
JPP/l3/z1/: DHSetup.hpp  User.hpp  z1_test.cpp
JPP/l3/z2/: DHSetup.java  GF.java  Main.java  User.java
JPP/l3/z3/: GF.py  z3.py
KKD/: README.md
KKD/l1/: Makefile
KKD/l1/app/: main.c
KKD/l2/: encoder.py  main.py  node.py
KKD/l3/: CMakeLists.txt
KKD/l3/app/: decode.cpp  encode.cpp
KKD/l3/inc/: analyze.hpp  dec_codes.hpp  enc_codes.hpp
KKD/l3/src/: analyze.cpp  dec_codes.cpp  enc_codes.cpp
KKD/l4/: Pixel.py  main.py
KKD/l5/: CMakeLists.txt
KKD/l6/: .gitignore  difference.py  differential_coding.py  l6_main.py  main_l6.py  pixel.py  v2.py  version_2.py
KKD/l7/: dekoder.py  koder.py  sprawdz.py  szum.py
MPIS/: README.md
MPIS/list3/: README.me  cdf_approx.py  timefraction.py
MPIS/list4/: binary_tree_graph.cpp  complete_graph.cpp  lollipop_graph.cpp  path_graph.cpp  path_graph_end.cpp
ON/l1/: z1_1.jl  z1_2.jl  z1_3.jl  z2.jl  z3.jl  z4.jl  z5.jl  z6.jl  z7.jl
ON/l2/: z1.jl  z3.jl  z4.jl  z5.jl  z6.jl
ON/l3/: module_z1_z2_z3.jl  test_module_z1_z2_z3.jl  z4.jl  z5.jl  z6.jl
ON/l4/: l4_module.jl  test.jl  test_l4_module.jl  z5.jl  z6.jl
ON/l5/: l5_solver_module.jl  mymatrix.jl
PL/l1/: z1.pl  z2.pl  z3.pl
PL/l2/: z1.pl  z2.pl  z3.pl
PL/l3/: z1.pl  z2.pl  z3.pl
PL/l4/: z1.pl  z2.pl
PL/l5/: z2.pl  z3.pl
PL/l6/: l5z1.pl  z1.pl  z2.pl  z3.pl
PW/l1/: z1.go
PW/l2/: z1.go
WZA/: z1.py  z2.py
WZA/z1/: z1_1.py
(+37 files in other folders)
